<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/settings_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:text="@string/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/attribution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="75dp"
        android:autoLink="all"
        android:focusable="true"
        android:text="@string/settingsicons"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/darkRow"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:visibility="visible"
        android:layout_marginTop="50dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/settings_darkLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_weight="0.5"

            android:textSize="20sp"
            android:text="@string/dark_mode" />

        <Switch
            android:id="@+id/darkSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/currencyRow"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:visibility="visible"
        android:layout_marginTop="100dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/settings_currencyLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_weight="0.5"

            android:textSize="20sp"
            android:text="@string/primary_currency" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="100dp"
            android:layout_height="60dp"

            android:gravity="end"
            android:padding="0dp"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:spinnerMode="dropdown"


            app:layout_constraintStart_toStartOf="parent"


            />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>